@@ -16,23 +16,25 @@
  */
 package org.graylog.datanode.opensearch.cli;
 
-import org.graylog.datanode.opensearch.configuration.OpensearchConfiguration;
-
+import java.nio.file.Path;
+import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 public class OpensearchKeystoreCli extends AbstractOpensearchCli {
 
-    OpensearchKeystoreCli(OpensearchConfiguration config) {
-        super(config, "opensearch-keystore");
+    public OpensearchKeystoreCli(Path configDir, Path binDir) {
+        super(configDir, binDir, "opensearch-keystore");
     }
 
     /**
      * Create a new opensearch keystore. This command expects that there is no keystore. If there is a keystore,
      * it will respond YES to override existing.
+     *
      * @return STDOUT/STDERR of the execution as one String
      */
     public String create() {
-        return runWithStdin(Collections.singletonList("Y"),"create");
+        return runWithStdin(Collections.singletonList("Y"), "create");
     }
 
     /**
@@ -40,6 +42,12 @@ public class OpensearchKeystoreCli extends AbstractOpensearchCli {
      * in the command line history). So we have to work around that and provide the value in STDIN.
      */
     public void add(String key, String secretValue) {
-        runWithStdin(Collections.singletonList(secretValue), "add", key);
+        runWithStdin(List.of(secretValue), "add", "-x", key); // -x allows input from stdin, bypassing the prompt
+    }
+
+    public List<String> list() {
+        final String rawResponse = runWithStdin(Collections.emptyList(), "list");
+        final String[] items = rawResponse.split("\n");
+        return Arrays.asList(items);
     }
 }
